refactor: code redistribution