@@ -13,7 +13,6 @@ import ru.practicum.shareit.booking.repository.BookingRepository;
 import ru.practicum.shareit.item.dto.request.ItemRequestDto;
 import ru.practicum.shareit.item.dto.response.ItemDetailsResponseDto;
 import ru.practicum.shareit.item.dto.response.SimpleItemResponseDto;
-import ru.practicum.shareit.item.exception.ItemNotFoundException;
 import ru.practicum.shareit.item.logger.ItemServiceLoggerHelper;
 import ru.practicum.shareit.item.mapper.ItemDtoMapper;
 import ru.practicum.shareit.item.model.Comment;
@@ -22,7 +21,6 @@ import ru.practicum.shareit.item.repository.ItemRepository;
 import ru.practicum.shareit.item.repository.comment.CommentRepository;
 import ru.practicum.shareit.request.repository.ItemRequestRepository;
 import ru.practicum.shareit.request.service.ItemRequestServiceImpl;
-import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.repository.UserRepository;
 
 import java.time.LocalDateTime;
@@ -48,13 +46,15 @@ public class ItemServiceImpl implements ItemService {
     @Transactional
     public SimpleItemResponseDto addItem(ItemRequestDto itemDto, Long ownerUserId) {
         validateUserExistsById(userRepository, ownerUserId);
-        validateItemRequestExistsById(itemDto.getRequestId());
+        if (itemDto.getRequestId() != null) {
+            ItemRequestServiceImpl.checkItemRequestExistsById(itemRequestRepository, itemDto.getRequestId());
+        }
 
         Item item = getItem(itemDto, ownerUserId);
         Item savedItem = itemRepository.save(item);
 
         ItemServiceLoggerHelper.itemSaved(log, savedItem);
-        return ItemDtoMapper.toSimpleItemResponseDto(savedItem, itemDto.getRequestId());
+        return ItemDtoMapper.toSimpleItemResponseDto(savedItem);
     }
 
     @Override
@@ -66,28 +66,25 @@ public class ItemServiceImpl implements ItemService {
 
         Item updatedItem = getUpdatedItem(itemDto, itemId, currentUserId);
         Item savedItem = itemRepository.save(updatedItem);
-        log.debug("ITEM[ID_{}] updated.", savedItem.getId());
 
-        if (updatedItem.getItemRequest() == null) {
-            return ItemDtoMapper.toSimpleItemResponseDto(updatedItem, null);
-        } else {
-            return ItemDtoMapper.toSimpleItemResponseDto(savedItem, updatedItem.getItemRequest().getId());
-        }
+        ItemServiceLoggerHelper.itemUpdated(log, savedItem);
+        return ItemDtoMapper.toSimpleItemResponseDto(savedItem);
     }
 
     @Override
     public ItemDetailsResponseDto getItemById(Long itemId, Long currentUserId) {
+        validateUserExistsById(userRepository, currentUserId);
         itemRepository.validateItemExistsById(itemId);
 
         Item item = itemRepository.getReferenceById(itemId);
 
         ItemDetailsResponseDto itemDto;
-        if (isOwner(item, currentUserId)) {
+        if (item.isOwnedByUserId(currentUserId)) {
             itemDto = getDetailedItemDto(item);
         } else {
             itemDto = getDetailedItemDtoWithoutBookings(item);
         }
-        log.debug("ITEM[ID_{}]<DTO> returned.", itemDto.getId());
+        ItemServiceLoggerHelper.itemDtoReturned(log, itemDto);
         return itemDto;
     }
 
@@ -95,49 +92,30 @@ public class ItemServiceImpl implements ItemService {
     public List<ItemDetailsResponseDto> getItemsByOwnerUserId(Long ownerUserId, Integer from, Integer size) {
         validateUserExistsById(userRepository, ownerUserId);
 
-        List<ItemDetailsResponseDto> itemsByOwnerId
-                = getItemsByOwnerIdWithPagination(ownerUserId, from, size);
+        Pageable page = PageRequest.of(from, size);
+        Page<Item> items = itemRepository.findAllByOwnerId(ownerUserId, page);
 
-        log.debug("All ITEM<DTO> returned, {} in total.", itemsByOwnerId.size());
-        return itemsByOwnerId;
+        List<ItemDetailsResponseDto> ownerItemDtos = getItemDetailsResponseDtos(items.toList());
+
+        ItemServiceLoggerHelper.itemDtosReturned(log, ownerItemDtos);
+        return ownerItemDtos;
     }
 
     @Override
-    public List<SimpleItemResponseDto> searchItemsByNameOrDescriptionIgnoreCase(String text,
-                                                                                Integer from, Integer size) {
-        if (StringUtils.isEmpty(text)) {
+    public List<SimpleItemResponseDto> searchItemsByNameOrDescriptionIgnoreCase(
+            String text, Integer from, Integer size
+    ) {
+        if (StringUtils.isBlank(text)) {
             return Collections.emptyList();
         }
 
-        List<SimpleItemResponseDto> foundItemsDto
-                = getItemsByNameOrDescriptionWithPagination(text, from, size);
-
-        log.debug("All ITEM<DTO> containing '{}' returned, {} in total.", text, foundItemsDto.size());
-        return foundItemsDto;
-    }
-
-    private List<SimpleItemResponseDto> getItemsByNameOrDescriptionWithPagination(String text,
-                                                                                  Integer from, Integer size) {
         Pageable page = PageRequest.of(from, size);
         List<Item> foundItems = findItemsByText(text, page);
-        return ItemDtoMapper.toSimpleItemResponseDto(foundItems);
-    }
 
-    private static boolean itemContainsTextInNameOrDescription(Item item, String text) {
-        boolean containsTextInName = StringUtils.containsIgnoreCase(item.getName(), text);
-        boolean containsTextInDescription = StringUtils.containsIgnoreCase(item.getDescription(), text);
-        return containsTextInName || containsTextInDescription;
-    }
+        List<SimpleItemResponseDto> itemDtos = ItemDtoMapper.toSimpleItemResponseDto(foundItems);
 
-    private static boolean isOwner(Item item, Long userId) {
-        Long ownerId = item.getOwner().getId();
-        return ownerId.equals(userId);
-    }
-
-    private void validateItemRequestExistsById(Long requestId) {
-        if (requestId != null) {
-            ItemRequestServiceImpl.checkItemRequestExistsById(itemRequestRepository, requestId);
-        }
+        ItemServiceLoggerHelper.itemDtosByTextReturned(log, text, itemDtos);
+        return itemDtos;
     }
 
     private Item getItem(ItemRequestDto itemDto, Long ownerUserId) {
@@ -152,39 +130,31 @@ public class ItemServiceImpl implements ItemService {
         return item;
     }
 
-    private Item getUpdatedItem(ItemRequestDto itemDto, Long itemId, Long ownerId) {
+    private Item getUpdatedItem(ItemRequestDto itemDto, Long itemId, Long ownerUserId) {
         Item item = itemRepository.getReferenceById(itemId);
+
+        item.setOwner(userRepository.getReferenceById(ownerUserId));
 
         Optional.ofNullable(itemDto.getName()).ifPresent(item::setName);
         Optional.ofNullable(itemDto.getDescription()).ifPresent(item::setDescription);
         Optional.ofNullable(itemDto.getAvailable()).ifPresent(item::setIsAvailable);
 
-        User owner = userRepository.getReferenceById(ownerId);
-        item.setOwner(owner);
-
         return item;
     }
 
     private List<Item> findItemsByText(String text, Pageable page) {
-        return itemRepository.findAllByIsAvailableIsTrue(page).toList()
-                .stream()
-                .filter(item -> itemContainsTextInNameOrDescription(item, text))
-                .collect(Collectors.toList());
+        return itemRepository.findAllByText(text, page).toList();
     }
 
     private ItemDetailsResponseDto getDetailedItemDtoWithoutBookings(Item item) {
-        List<Comment> comments = commentRepository.findAllByItemId(item.getId());
-        return ItemDtoMapper.toDetailedItemDtoWithoutBookings(item, comments);
+        return ItemDtoMapper.toItemDetailsResponseDto(
+                item,
+                commentRepository.findAllByItemId(item.getId()),
+                null,
+                null);
     }
 
-    private List<ItemDetailsResponseDto> getItemsByOwnerIdWithPagination(Long ownerId,
-                                                                         Integer from, Integer size) {
-        Pageable page = PageRequest.of(from, size);
-        Page<Item> items = itemRepository.findAllByOwnerId(ownerId, page);
-        return toDetailedItemDto(items.toList());
-    }
-
-    private List<ItemDetailsResponseDto> toDetailedItemDto(List<Item> items) {
+    private List<ItemDetailsResponseDto> getItemDetailsResponseDtos(List<Item> items) {
         return items.stream()
                 .map(this::getDetailedItemDto)
                 .collect(Collectors.toList());
@@ -202,14 +172,6 @@ public class ItemServiceImpl implements ItemService {
                 .findFirstByItemIdAndStartTimeIsAfter(item.getId(), time)
                 .orElse(null);
 
-        if (lastBooking != null && nextBooking != null) {
-            return ItemDtoMapper.toDetailedItemDto(item, comments, lastBooking, nextBooking);
-        } else if (lastBooking == null && nextBooking == null) {
-            return ItemDtoMapper.toDetailedItemDtoWithoutBookings(item, comments);
-        } else if (lastBooking == null) {
-            return ItemDtoMapper.toDetailedItemDtoWithoutLastBooking(item, comments, nextBooking);
-        } else {
-            return ItemDtoMapper.toDetailedItemDtoWithoutNextBooking(item, comments, lastBooking);
-        }
+        return ItemDtoMapper.toItemDetailsResponseDto(item, comments, lastBooking, nextBooking);
     }
 }
